# lexx

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  Varney-the-Vampire.txt
.github/workflows/: benchmark.yml  release.yml  rust.yml
benches/: gutenberg_lexx.rs  lexx_bench.rs  lexxor_bench.rs  rolling_char_buffer_bench.rs
examples/: basic_tokenization.rs  code_tokenization.rs  custom_matcher.rs  custom_token_type.rs  file_reader.rs  iterator.rs  token_analysis.rs
scripts/: run_benchmarks.ps1
src/: input.rs  lib.rs  main.rs  matcher.rs  matcher_exact.rs  matcher_exact.rs~  matcher_float.rs  matcher_integer.rs  matcher_keyword.rs  matcher_symbol.rs  matcher_whitespace.rs  matcher_word.rs  rolling_char_buffer.rs  rolling_char_buffer.rs~  token.rs
src/input/: inputs.rs  mod.rs
src/input/inputs/: file_input.rs  string_input.rs
src/matcher/: exact.rs  exact.rs~  float.rs  integer.rs  keyword.rs  matchers.rs  mod.rs  symbol.rs  whitespace.rs  word.rs
src/matcher/matchers/: exact_matcher.rs  float_matcher.rs  integer_matcher.rs  keyword_matcher.rs  symbol_matcher.rs  whitespace_matcher.rs  word_matcher.rs
src/util/: mod.rs  rolling_char_buffer.rs  token.rs
