[package]
name = "lexx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lexx"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.7.2"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "lexx_bench"
harness = false

[[bench]]
name = "rolling_char_buffer_bench"
harness = false
