[package]
name = "lexxor"
version = "0.9.1"
edition = "2024"
description = "A fast, extensible, greedy, single-pass text tokenizer for Rust"
authors = ["Jeff M. Thomas <jeffthomas3000@gmail.com>"]
license = "MIT"
repository = "https://github.com/JeffThomas/lexx"
documentation = "https://github.com/JeffThomas/lexx"
keywords = ["tokenizer", "lexer", "parser", "text", "scanning"]
categories = ["parsing", "text-processing"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lexxor"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.7.6"

[dev-dependencies]
criterion = "0.5"
rand = "0.9.1"

[[bench]]
name = "lexxor_bench"
harness = false

[[bench]]
name = "rolling_char_buffer_bench"
harness = false
